--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,11 @@
 .App {
-  text-align: center;
-  position: absolute;
-  width: 1440px;
-  height: 1565px;
+  display: block;
+  width: 100%;
+  height: 100%;
   left: 0px;
   top: 0px;
+  padding: 0%;
+  margin: 0px;
   background: linear-gradient(180deg, rgba( 4, 7, 0) 0%, #A40910 20.46%, #000000 100%);
 }
-
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-.Header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url('../public/topp.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  justify-content: center;
-  opacity: 0.35;
-  font-size: calc(10px + 2vmin);
-}
-h1{
-  position: absolute;
-  width: 331px;
-  height: 44px;
-  left: 554px;
-  top: 336px;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 36px;
-  line-height: 44px;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-
-  color: #FFFFFF;
-
-  text-shadow: 10px 10px 16px rgba(0, 0, 0, 0.25);
-}
-
-
-
-
 
