--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,27 +1,43 @@
-card-container{ 
+.cards-container{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding: 25px 50px;
+    border: solid 5px;
+    border-color: rgb(236, 223, 48);
+    
+}
+/* 
+.card-container{ 
+    width: 206px;
+    height: 221px;
     box-sizing: border-box;
-    position: absolute;
+    position: relative;
+    display: flex;
+    justify-content: center;
     left: 0%;
     right: 0%;
     top: 0%;
     bottom: 26.09%;
-    background: radial-gradient(153.9% 81% at 50% 86.43%, #EBD300 0%, #CE0014 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    background: radial-gradient(153.9% 81% at 50% 86.43%, #EBD300 0%, #CE0014 100%);
     border: 3px solid #FFFFFF;
     box-shadow: 0px 9px 16px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
-card-container:hover{
-    
+.card-container:hover{
+
 }
-card-title{
-    position: absolute;
+ .card-title{
+    
     width: 206px;
     height: 36px;
     left: 0px;
     top: 10px;
+    font-family: 'Quicksand', sans-serif;
     
-    font-family: 'Inter';
-    font-style: normal;
+    font-style: bold;
     font-weight: 900;
     font-size: 26px;
     line-height: 31px;
@@ -30,9 +46,9 @@ card-title{
     text-align: center;
     
     color: #FFFFFF;
-}
-card-universe{
-    position: absolute;
+} 
+ .card-universe{
+    
     width: 112px;
     height: 36px;
     left: 47px;
@@ -46,11 +62,10 @@ card-universe{
     align-items: center;
     text-align: center;
     color: #FFFFFF;
-}
-card-image{
-    position: absolute;
-    width: 133px;
-    height: 186px;
+} 
+.card-image{ 
+    width: 100px;
+    height: 100px;
     left: 0px;
-    top: 0px;
-}
+    top: 0px; 
+}  */
