--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,13 @@
 .Header {
     border: solid 5px;
     border-color: aqua;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding: 25px 50px;
+
     /* min-height: 100vh;
     display: flex;
     flex-direction: column;
