--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  font-family: 'Inter', sans-serif;
+  font-family: 'Quicksand', sans-serif;  
   display: block;
   width: 100%;
   height: 100%;
