--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     display: block;
     align-items: center;
+    padding: 10px 10px;
     margin: 10% 20% 50% 5%;
     left: 0%;
     right: 0%;
@@ -26,13 +27,16 @@
 .card-container:hover{
 } 
  .card-title{
-    width: 200px;
+    /* border: solid 5px;
+    border-color: rgb(18, 227, 91); */
+    width: 180px;
     height: 36px;
     left: 0px;
-    top: 10px;
+    top: 5px;
     line-height: 31px;
     display: flex;
     justify-content: center;
+    align-items: baseline;
 } 
 .card-title h2{
     color: #FFFFFF;
@@ -42,28 +46,32 @@
     font-size: 26px;
 }
  .card-universe{
-    border: solid 5px;
-    border-color: rgb(18, 227, 91);
-    width: 206px;
+    /* border: solid 5px;
+    border-color: rgb(18, 227, 91); */
+    width: 180px;
     height: 36px;
-    left: 47px;
-    top: 36px;
-    font-family: 'Inter';
+    display: flex;
+    justify-content: center;
+} 
+.card-universe h3{
     font-style: normal;
     font-weight: normal;
-    font-size: 10px;
-    line-height: 22px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+    font-size: 18px;
     color: #FFFFFF;
-} 
+}
 .card-image{ 
-    width: 100px;
-    height: 100px;
+    border: solid 5px;
+    border-color: rgb(18, 227, 91);
+    display: flex;
+    justify-content: space-evenly;
+    width: 180px;
+    height: 180px;
     left: 0px;
     top: 0px; 
 } 
+.card-image img{
+    object-fit: cover;
+}
 .card-btn{
 
 } 
