--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   top: 0px;
   padding: 0%;
   margin: 0px;
+  position: relative;
+  z-index: -2;
   background: linear-gradient(180deg, rgba( 4, 7, 0) 0%, #A40910 20.46%, #000000 100%);
 }
-
