--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,21 +1,74 @@
-.Header {
-    border: solid 5px;
-    border-color: aqua;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    margin-left: 150px;
-    margin-right: 150px;
-    padding: 25px 50px;
-
-    /* min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url('../public/topp.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    justify-content: center;
-    opacity: 0.35;
-    font-size: calc(10px + 2vmin); */
-  }
+.header{
+  height: 350px;
+  /* border: solid 5px;
+  border-color: aqua; */
+  display: block;
+  margin-left: 120px;
+  margin-right: 100px;
+  margin-bottom: 0px;
+  padding: 2px 50px;
+  /* font-size: calc(10px + 2vmin);  */
+  position: relative;
+  justify-content: center;
+}
+.header::after{
+  content: '';
+  background: url('../../public/topp.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60%;
+  opacity: 0.35;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+.header-nav{
+  height: 200px;
+  /* border: solid 5px;
+  border-color: rgb(226, 235, 229);  */
+  display: flex;
+  justify-content: space-between;
+}
+.header-nav-barra{
+  display: flex;
+  flex-direction: column ;
+}
+.header-icon{
+  background-color: #FFFFFF;
+  border-radius: 88px;
+}
+h4{
+  font-style: normal;
+  font-weight: normal;
+  font-family: 'Inter';
+  font-size: 18px;
+  color: #FFFFFF;
+}
+.header-title{ 
+  position: relative;
+  z-index: 1;
+  /* border: solid 5px;
+  border-color: rgb(49, 158, 89);  */
+  display: flex;
+  flex-direction: column;
+}
+.header-title-img{
+  /* border: solid 5px;
+  border-color: rgb(226, 245, 233); */
+  display: flex;
+  justify-content: center;
+}
+h1{
+  display: flex;
+  justify-content: center;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 44px;
+  color: #FFFFFF;
+  text-shadow: 10px 10px 16px rgba(0, 0, 0, 0.25);
+}
