--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,5 @@
   padding: 0%;
   margin: 0px;
   position: relative;
-  z-index: -2;
-  background: linear-gradient(180deg, rgba( 4, 7, 0) 0%, #A40910 20.46%, #000000 100%);
+  /* background: linear-gradient(180deg, rgba( 4, 7, 0) 0%, #A40910 20.46%, #000000 100%); */
 }
