--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,6 @@
+body{
+  background: linear-gradient(180deg, rgba( 4, 7, 0) 0%, #A40910 20.46%, #000000 100%);
+}
 .header{
   height: 350px;
   /* border: solid 5px;
