--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -72,3 +72,18 @@ h1{
   color: #FFFFFF;
   text-shadow: 10px 10px 16px rgba(0, 0, 0, 0.25);
 }
+.style-nav{
+  width: 149px;
+height: 19px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+}
